--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         <a href="#">
             <i class="bi bi-stars"></i>
             <h4>Pixel Perfect</h4>
-            <p>Most common methods for desining <br> website that work well on desktop is <br> responsive and adaptive design. </p>
+            <p>Most common methods for designing <br> website that work well on desktop is <br> responsive and adaptive design. </p>
         </a>
         <a href="#"><i class="bi bi-brush-fill" id="br"></i>
             <h4>High Quality</h4>
-            <p>Most common methods for desining <br> website that work well on desktop is <br> responsive and adaptive design. </p></a>
+            <p>Most common methods for designing <br> website that work well on desktop is <br> responsive and adaptive design. </p></a>
         <a href="#"><i class="bi bi-lightbulb-fill"></i>
             <h4>Awesome Idea</h4>
-            <p>Most common methods for desining <br> website that work well on desktop is <br> responsive and adaptive design. </p></a>
+            <p>Most common methods for designing <br> website that work well on desktop is <br> responsive and adaptive design. </p></a>
     </div>
 </div>
 <section class="about">
